fix button hover effect that make button shifts up and down

--- a/app/style/base/pages/_price.scss
+++ b/app/style/base/pages/_price.scss
@@ -45,29 +45,28 @@
       }
     }
     .subscription {
+      position: relative;
       @include flex(center, center, column, 1.6rem);
       &::before {
         content: "";
         position: absolute;
-        top: 22rem;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 60rem;
-        height: 25rem;
+        left: 0;
+        top:-4rem;
+        width: 100%;
+        height: 30rem;
         background: radial-gradient(
           circle at 50% 20%,
-          rgba($dark-purple, 0.52),
+          rgba($purple, 0.5),
           transparent 80%
         );
-        filter: blur(6rem);
+        filter: blur(5rem);
         z-index: -1;
-
-        @include breakpoint(sm) {
+        @include breakpoint(md) {
+          top: 0;
           filter: blur(10rem);
+          height: 20rem;
         }
-        
         @include breakpoint(lg) {
-          height: 40rem;
           background: radial-gradient(
             circle at 50% 20%,
             rgba($purple, 0.5),
@@ -76,6 +75,7 @@
         }
       }
       .billing-toggle {
+        position: relative;
         @include flex(center, center, row, 1.2rem);
         margin: 0 auto;
       }
@@ -122,12 +122,11 @@
         }
 
         &__options {
-
           &.pricing-tiers__popular_option {
             border: 0.13rem solid $purple;
 
             &::before {
-              content: 'Most popular';
+              content: "Most popular";
               position: absolute;
               top: -1.5rem;
               left: 50%;
@@ -141,7 +140,6 @@
               box-shadow: 0 0.4rem 0.8rem rgba($purple, 0.4);
               z-index: 1;
             }
-        
           }
           width: 100%;
           border: 0.1rem solid rgba($color: $white, $alpha: 0.2);
@@ -158,7 +156,6 @@
           border-radius: 1.5rem;
           width: 100%;
           margin: 0 auto;
-          backdrop-filter: blur(9rem);
           @supports (-webkit-appearance: none) {
             opacity: 1;
             transform: none;
@@ -219,7 +216,6 @@
             &:hover {
               background-color: $dark-purple;
               border-color: $dark-purple;
-              transform: translateY(-0.2rem);
               box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.3);
             }
             @include breakpoint(lg) {
